[tool.poetry]
name = "yangson"
version = "1.4.19"
description = "Library for working with data modelled in YANG"
authors = ["Ladislav Lhotka <ladislav@lhotka.name>"]
license = "GNU Lesser General Public License v3 (LGPLv3)"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
elementpath = "^4.1.5"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.scripts]
yangson = "yangson.__main__:main"
convert8525 = "yangson.convert8525:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
