[project]
name = "yangson"
description = "Library for working with data modelled in YANG"
license = "GNU Lesser General Public License v3 (LGPLv3)"
dynamic = ["version"]
readme = "README.rst"
authors = [{name = "Ladislav Lhotka", email = "ladislav@lhotka.name"}]
requires-python = '>=3.9,<4.0'
dependencies = ['elementpath (>=4.1.5,<5.0.0)', 'PyYAML (>=6.0.1,<7.0.0)', "sphinxcontrib-shtest (>=0.5.0,<0.6.0)"]

[project.scripts]
yangson = "yangson.__main__:main"
convert8525 = "yangson.convert8525:main"

[project.optional-dependencies]
yang-tools = ["pyang>=2.7.1,<3.0"]

[tool.poetry]
version = "1.6.4"
requires-poetry = '>=2.0'

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ['poetry-core (>=2.0)']
build-backend = "poetry.core.masonry.api"
